# MCMC-for-Classical-Spin-Systems

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  entrypoint.sh  gitlab.ci.yml  helloworld.cpp  hellworld.cpp  main.cpp  resources.qrc  test.cpp
Algorithm/: MonteCarlo.cpp
Model/: Ising.cpp  Ising.hpp  Model.hpp
Plot/: AverageEnergyPlot.cpp  MagneticStatePlot.cpp
Utilities/: Output.hpp
ui/: chart.cpp  chart.ui  controls.cpp  controls.h  controls.ui  logs.cpp  logs.h  logs.ui  mdi.cpp  mdi.h  mdi.ui
